improve unit test - fix more deprecation warnings from jdk 11 - fix order of expected/actual parameters
git-svn-id: https://svn.mkgmap.org.uk/mkgmap/mkgmap@4800 25d90789-57f7-4ee0-8453-03a3dfeeeb22